--- a/public/style.css
+++ b/public/style.css
@@ -84,6 +84,16 @@ footer {
 	clear: both ;
 }
 
+.menuname{
+	font-weight: bold;
+	position: sticky;
+	display: block;
+    position: fixed;
+    width: 100%;
+    z-index: 60;
+}
+
+
 /* For NEXTPREV.HTML */
 #nextprev {
 	/* The container for both the previous and next articles. */
