--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,8 +1,6 @@
 <nav>
     <ul>
-	{{- $sec := .Page.Section }}{{ $file := .File.TranslationBaseName -}}
-        {{ range.Site.Menus.main.ByWeight }}{{ $base := path.Base .URL }}
-	<a {{ if or ( eq $sec $base ) ( eq $file $base ) ( and (eq $sec "") ( eq $file "_index") (eq $base "/") ) }}class="menuactive" {{ end }}href="{{ .URL }}"><span class=pre>{{ .Pre }}</span><span class=menuname>{{ "◀️ Back to Home" }}</span></a>
-        {{- end }}
+        <a href="/"><span class=menuname>{{ "◀️ Back to Home" }}</span></a><br><br>
+        <a href="/about"><span class=menuname>{{ "🔬 About" }}</span></a>
     </ul>
 </nav>
