--- a/public/style.css
+++ b/public/style.css
@@ -75,6 +75,7 @@ h3 {
 }
 
 h4{
+	margin: 12px;
 	font-size: 24px;
 	text-align: center ;
 }
@@ -91,6 +92,7 @@ footer {
 }
 
 .menuname{
+	margin-top: 15px;
 	font-weight: bold;
 	position: sticky;
 	display: block;
