--- a/static/style.css
+++ b/static/style.css
@@ -59,6 +59,7 @@ header h1 {
 	font-size: 40px;
 	text-align: center ;
 	color: whitesmoke;
+	line-height: 1;
 }
 
 h1 {
@@ -98,7 +99,6 @@ footer {
 	position: sticky;
 	display: block;
     position: fixed;
-    width: 100%;
     z-index: 60;
 }
 
